--- a/root/public/assets/css/pages.css
+++ b/root/public/assets/css/pages.css
@@ -84,114 +84,19 @@ border-bottom: 2px solid #66cc33;
   padding-top: 20px;
   border-top: 2px solid #66cc33;
   border-bottom: 2px solid #66cc33;
-  width: 100%;
-}
-
-.cron-feed-addresses > p {
-  margin: 0 10px 20px 10px;
-}
-
-/* ================================================
-    GALLERY PAGE STYLES
-================================================ */
-
-.images-list {
   display: flex;
-  flex-wrap: wrap;
-  border: 2px solid #66cc33;
-  overflow-y: hidden;
-  overflow-x: hidden;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  justify-content: space-around;
 }
 
-.image-item {
-  width: 33.33%;
-  height: 225px;
-  border: 1px solid #66cc33;
-  box-sizing: border-box;
-}
-
-.image-item img {
-  width: 100%;
-  height: 225px;
-}
-
-.no-images {
-  margin: 20px;
-  font-size: 2dropem;
-}
-
-.delete-image {
-  position: relative;
-  bottom: 55px;
-  left: 10px;
-}
-
-#account_selection_form > select {
-  border: 1px solid #66cc33;
-}
-
-.dropzone {
-  min-height: 304px!important;
-  border: 2px solid #66cc33!important;
-  background: white!important;
-  padding: 20px 20px!important;
-  margin-bottom: 20px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  overflow-y: overlay;
-  max-height: 400px;
-}
-
-.dropzone .dz-message {
-  margin-top: 60px;
-}
-
-.dz-button {
-  box-shadow: unset;
-}
-
-.dropzone .dz-preview .dz-image {
-  width: 100px!important;
-  height: 100px!important;
-}
-
-.pagination {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.pagination a {
+cron-feed-addresses button {
   display: inline-block;
-  margin: 0 5px;
-  background-color: #66cc33;
-  color: #fff;
-  border: none;
-  font-size: 18px;
-  padding: 10px 20px;
-  border-radius: 4px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: box-shadow 0.3s;
-}
-
-.pagination a.active {
-  background-color: #333;
-  color: #fff;
-}
-
-.pagination a:hover {
-  background-color: #0366d6;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 /* ================================================
-    ACCOUNT/USER/GALLERY EDITING STYLES
+    ACCOUNT/USER EDITING STYLES
 ================================================ */
 .edit-users-box,
-.edit-accounts-box,
-.edit-images-box {
+.edit-accounts-box{
   display: flex;
   flex-direction: row;
   border-radius: 20px 20px 0 0;
@@ -200,16 +105,14 @@ border-bottom: 2px solid #66cc33;
 }
 
 .edit-users-form,
-.edit-accounts-form,
-.edit-images-form {
+.edit-accounts-form {
   width: 25%;
   padding: 20px;
   background-color: #d6d6d6;
 }
 
 .edit-users-list,
-.edit-accounts-list,
-.edit-images-list {
+.edit-accounts-list{
   width: 75%;
 }
 
