--- a/root/public/assets/css/pages.css
+++ b/root/public/assets/css/pages.css
@@ -88,7 +88,7 @@ border-bottom: 2px solid #66cc33;
   justify-content: space-around;
 }
 
-cron-feed-addresses button {
+.cron-feed-addresses button {
   display: inline-block;
 }
 
