--- a/root/public/assets/css/login.css
+++ b/root/public/assets/css/login.css
@@ -6,7 +6,6 @@ body {
   max-width: 100%;
   overflow-x: hidden;
 }
-
 body {
   align-items: center;
   background-color: #f1f1f1;
@@ -18,13 +17,11 @@ body {
   max-width: 100%;
   overflow-x: hidden;
 }
-
 .logo {
   height: 60px;
   margin-bottom: 20px;
   width: 300px;
 }
-
 .login-box {
   background-color: #ffffff;
   border: 2px solid #66cc33;
@@ -34,11 +31,9 @@ body {
   text-align: center;
   width: 400px;
 }
-
 .login-box form {
   text-align: left;
 }
-
 input[type="text"],
 input[type="password"] {
   border: 1px solid #66cc33;
@@ -47,7 +42,6 @@ input[type="password"] {
   padding: 5px;
   width: 100%;
 }
-
 input[type="submit"] {
   background-color: #66cc33;
   border: none;
@@ -57,27 +51,25 @@ input[type="submit"] {
   padding: 8px 20px;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
-
 input[type="submit"]:hover {
   background-color: #3e8e41;
   box-shadow: rgba(0, 0, 0, 0.1) 1.95px 1.95px 2.6px;
 }
-
 #error-msg {
   color: #ff0000;
   margin-bottom: 10px;
   padding: 10px;
 }
-
 @media (max-width: 600px) {
   /* Adjust the logo size for smaller screens */
   .logo {
     height: auto;
     width: 60%;
   }
-
   /* Reduce the width of the login box for smaller screens */
   .login-box {
     width: 80%;
+    top: 100px;
+    position: fixed;
   }
 }
