--- a/root/public/assets/css/pages.css
+++ b/root/public/assets/css/pages.css
@@ -24,6 +24,7 @@
   justify-content: space-between;
   width: 20%;
   border: 2px solid #66cc33;
+  border-bottom: 8px solid #66cc33;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 .status-text {
@@ -46,10 +47,9 @@
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-around;
-  margin: 0 -10px 0 -10px;
+  margin: 0 -10px -10px -10px;
   padding: 10px;
   border-top: 2px solid #66cc33;
-  border-bottom: 2px solid #66cc33;
 }
 .share-buttons svg {
   -webkit-filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.3));
@@ -133,4 +133,8 @@
 }
 .account-details p {
   margin-inline: 10px;
+}
+
+#cron {
+  height: 300px;
 }
