--- a/root/public/assets/css/pages.css
+++ b/root/public/assets/css/pages.css
@@ -25,7 +25,7 @@
   width: 20%;
   border: 2px solid #66cc33;
   border-bottom: 8px solid #66cc33;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 .status-text {
   overflow-x: overlay;
@@ -63,14 +63,17 @@
   filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.1));
 }
 .account-action-container {
-  padding: 10px;
-  border-top: 2px solid #66cc33;
-  border-bottom: 2px solid #66cc33;
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
+    padding: 40px 10px 10px 10px;
+    border-top: 2px solid #66cc33;
+    border-bottom: 2px solid #66cc33;
+    background: aliceblue;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    margin: -50px -10px 0 -10px;
+  }
 .account-action-container button {
   margin: 10px;
   width: 200px;
@@ -134,7 +137,6 @@
 .account-details p {
   margin-inline: 10px;
 }
-
 #cron {
   height: 300px;
 }
