--- a/root/public/assets/css/styles.css
+++ b/root/public/assets/css/styles.css
@@ -147,8 +147,8 @@ button:hover {
 ================================================ */
 textarea,
 select,
-input[type="text" i],
-input[type="password" i] {
+input[type="text"],
+input[type="password"] {
   display: block;
   padding: 8px 6px;
   margin-bottom: 20px;
@@ -158,7 +158,7 @@ input[type="password" i] {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-input[type="submit" i] {
+input[type="submit"] {
   color: #fff;
   border: none;
   font-size: 18px;
